crates/snforge-scarb-plugin/tests/integration/snapshots/integration__multiple_attributes__works_with_test_fuzzer_and_test_case@after_fuzzer_config.snap
---
source: tests/integration/multiple_attributes.rs
expression: format_output(&result)
---
#[implicit_precedence(
    core::pedersen::Pedersen,
    core::RangeCheck,
    core::integer::Bitwise,
    core::ec::EcOp,
    core::poseidon::Poseidon,
    core::SegmentArena,
    core::circuit::RangeCheck96,
    core::circuit::AddMod,
    core::circuit::MulMod,
    core::gas::GasBuiltin,
    System,
)]
#[snforge_internal_test_executable]
fn test_add_one_and_two(mut _data: Span<felt252>) -> Span<felt252> {
    if snforge_std::_internals::is_config_run() {
        let mut data = array![];
        snforge_std::_internals::config_types::FuzzerConfig {
            seed: Option::None, runs: Option::None,
        }
            .serialize(ref data);
        starknet::testing::cheatcode::<'set_config_fuzzer'>(data.span());
        return;
    }
    core::internal::require_implicit::<System>();
    core::internal::revoke_ap_tracking();
    core::option::OptionTraitImpl::expect(core::gas::withdraw_gas(), "Out of gas");
    core::option::OptionTraitImpl::expect(
        core::gas::withdraw_gas_all(core::gas::get_builtin_costs()), "Out of gas",
    );
    test_add(1, 2, 3);
    let mut arr = ArrayTrait::new();
    core::array::ArrayTrait::span(@arr)
}
