crates/snforge-scarb-plugin/tests/integration/snapshots/integration__multiple_attributes__works_with_test_fuzzer_and_test_case@after_test.snap
---
source: tests/integration/multiple_attributes.rs
expression: format_output(&result)
---
#[test_case(name: "one_and_two", 1, 2, 3)]
fn test_add(x: i128, y: i128, expected: i128) {}
