crates/snforge-scarb-plugin/tests/integration/snapshots/integration__multiple_attributes__works_with_test_fuzzer_and_test_case@after_test_case.snap
---
source: tests/integration/multiple_attributes.rs
expression: format_output(&result)
---
#[implicit_precedence(
    core::pedersen::Pedersen,
    core::RangeCheck,
    core::integer::Bitwise,
    core::ec::EcOp,
    core::poseidon::Poseidon,
    core::SegmentArena,
    core::circuit::RangeCheck96,
    core::circuit::AddMod,
    core::circuit::MulMod,
    core::gas::GasBuiltin,
    System,
)]
#[snforge_internal_test_executable]
fn test_add_one_and_two(mut _data: Span<felt252>) -> Span<felt252> {
    core::internal::require_implicit::<System>();
    core::internal::revoke_ap_tracking();
    core::option::OptionTraitImpl::expect(core::gas::withdraw_gas(), 'Out of gas');
    core::option::OptionTraitImpl::expect(
        core::gas::withdraw_gas_all(core::gas::get_builtin_costs()), 'Out of gas',
    );
    test_add(1, 2, 3);
    let mut arr = ArrayTrait::new();
    core::array::ArrayTrait::span(@arr)
}
#[__fuzzer_config]
#[__fuzzer_wrapper]
#[__internal_config_statement]
fn test_add(x: i128, y: i128, expected: i128) {}
